--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,16 @@ body {
   background: rgb(70,70,70);
   background: linear-gradient(90deg, rgba(70,70,70,1) 0%, rgba(150,150,150,1) 50%, rgba(70,70,70,1) 100%);
 }
+#sideBar {
+  flex: 0 0 auto;
+  height: 100%;
+}
+#main {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  height: 100%;
+}
 .mainImage {
   max-height: 99vh;
   height: 99vh;
@@ -30,16 +40,35 @@ body {
   font-size: 5vh;
   padding: 0 3vw;
 }
+#cornerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cornerButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 12vw;
+  height: 5vh;
+  border: none;
+  border-radius: 15px;
+  margin: 0.2vh 0;
+  background-color: rgb(60, 60, 60);
+  font-size: 3.5vh;
+  color: white;
+}
+
 .counterZone {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute; 
-  top: 0.5vh;
-  left: 0.5vh;
   height:4vw;
-  width: 10vw;
-  border-radius: 20px;
+  width: 12vw;
+  margin: 0.2vh 0;
+  border-radius: 15px;
   background-color: rgb(60, 60, 60);
 }
 #indexZone {
@@ -75,32 +104,8 @@ body {
   color: white;
   font-size: clamp(2vw, 2.5vw, 3vw); 
 }
-.cornerButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  width: 10vw;
-  height: 5vh;
-  border: none;
-  border-radius: 20px;
-  background-color: rgb(60, 60, 60);
-  font-size: 3.5vh;
-  color: white;
-}
-#importButton {
-  top: 4.5vw;
-  left: 0.5vh;
-}
-#importButton:hover {
-  color: rgb(0, 120, 218);
-  cursor:pointer;
-}
-#overviewButton {
-  top: 7.2vw;
-  left: 0.5vh;
-}
-#overviewButton:hover {
+
+.cornerButton:hover {
   color: rgb(0, 120, 218);
   cursor:pointer;
 }
