--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: stretch;  
   font-family: sans-serif;
   height: 100vh;
@@ -13,15 +13,15 @@ body {
 #sideBar {
   left: 0;
   top: 0;
-  display: flex;
+  display: flex 0 0 auto;
   height: 100%;
-  width: 40vw;
+  width: auto;
 }
 
 #cornerContainer {
+  position: sticky;
   left: 0;
   top: 0;
-  position:fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -169,5 +169,9 @@ body {
 }
 
 #deleteButton {
+  display: none;
+}
+
+#startButton {
   display: none;
 }
